<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="16dp"
    android:background="#FFFFFF">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:padding="16dp"
            android:text="@string/day"
            android:textStyle="bold"/>

        <TextView
            android:padding="16dp"
            android:id="@+id/day_text_view"/>

        <TextView
            android:padding="16dp"
            android:text="@string/time_in"
            android:textStyle="bold"/>

        <TextView
            android:padding="16dp"
            android:id="@+id/time_in_text_view"/>

        <TextView
            android:padding="16dp"
            android:text="@string/time_out"
            android:textStyle="bold"/>

        <TextView
            android:padding="16dp"
            android:id="@+id/time_out_text_view"/>

        <TextView
            android:padding="16dp"
            android:text="@string/location"
            android:textStyle="bold"/>

        <TextView
            android:padding="16dp"
            android:id="@+id/locality_text_view"/>
    </GridLayout>

    <Button
        android:id="@+id/book_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:text="@string/book_appointment"/>
</LinearLayout>
