<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mindfire.ourhealth.appointments.AppointmentDetailsFragment">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="32dp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:padding="32dp"
        android:background="#FFFFFF">

        <TextView
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/timing_label"/>

        <TextView
            android:id="@+id/timing_text_view"
            android:padding="16dp"/>

        <TextView
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/status_text_view"
            android:padding="16dp"/>

        <TextView
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/date_title"/>

        <TextView
            android:id="@+id/date_text_view"
            android:padding="16dp"/>

        <TextView
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/address"/>

        <TextView
            android:id="@+id/address_text_view"
            android:padding="16dp"/>
    </GridLayout>

    <Button
        android:id="@+id/cancel_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="6dp"
        android:layout_margin="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel_appointment" />
</LinearLayout>
