<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_edit_text"
            style="@style/SignUpFragmentEditText"
            android:inputType="text"
            android:hint="@string/user_id" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_edit_text"
            style="@style/SignUpFragmentEditText"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/re_enter_password_edit_text"
            style="@style/SignUpFragmentEditText"
            android:inputType="textPassword"
            android:hint="@string/re_enter_password" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/security_question_spinner"
        style="@style/SignUpFragmentSpinner" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/security_question_edit_text"
            style="@style/SignUpFragmentEditText"
            android:inputType="text"
            android:hint="@string/security_question_answer" />
    </android.support.design.widget.TextInputLayout>

</merge>